--- a/modules/_sensors_.html
+++ b/modules/_sensors_.html
@@ -74,10 +74,16 @@
 						<section class="tsd-index-section tsd-is-external">
 							<h3>Classes</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.colorsensor.html" class="tsd-kind-icon">Color<wbr>Sensor</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.gyrosensor.html" class="tsd-kind-icon">Gyro<wbr>Sensor</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.i2csensor.html" class="tsd-kind-icon">I2CSensor</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.infraredsensor.html" class="tsd-kind-icon">Infrared<wbr>Sensor</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.lightsensor.html" class="tsd-kind-icon">Light<wbr>Sensor</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.sensor.html" class="tsd-kind-icon">Sensor</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.sensorbase.html" class="tsd-kind-icon">Sensor<wbr>Base</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.soundsensor.html" class="tsd-kind-icon">Sound<wbr>Sensor</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.touchsensor.html" class="tsd-kind-icon">Touch<wbr>Sensor</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.ultrasonicsensor.html" class="tsd-kind-icon">Ultrasonic<wbr>Sensor</a></li>
 							</ul>
 						</section>
 					</div>
@@ -116,7 +122,19 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
+						<a href="../classes/_sensors_.colorsensor.html" class="tsd-kind-icon">Color<wbr>Sensor</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
+						<a href="../classes/_sensors_.gyrosensor.html" class="tsd-kind-icon">Gyro<wbr>Sensor</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
 						<a href="../classes/_sensors_.i2csensor.html" class="tsd-kind-icon">I2CSensor</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
+						<a href="../classes/_sensors_.infraredsensor.html" class="tsd-kind-icon">Infrared<wbr>Sensor</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
+						<a href="../classes/_sensors_.lightsensor.html" class="tsd-kind-icon">Light<wbr>Sensor</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
 						<a href="../classes/_sensors_.sensor.html" class="tsd-kind-icon">Sensor</a>
@@ -125,7 +143,13 @@
 						<a href="../classes/_sensors_.sensorbase.html" class="tsd-kind-icon">Sensor<wbr>Base</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
+						<a href="../classes/_sensors_.soundsensor.html" class="tsd-kind-icon">Sound<wbr>Sensor</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
 						<a href="../classes/_sensors_.touchsensor.html" class="tsd-kind-icon">Touch<wbr>Sensor</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
+						<a href="../classes/_sensors_.ultrasonicsensor.html" class="tsd-kind-icon">Ultrasonic<wbr>Sensor</a>
 					</li>
 				</ul>
 			</nav>
